@startuml Factory
class Client
interface CommandExecutor {
     + connect(host, port,user,password):void  
     + execute(query): Result  
     + close(): void
}
class MariaDbCommandExecutor
class OracleCommandExecutor
class CommandExecutorFactory {
     # getCommandExecutor(TypeDb type): CommandExecutor
}
enum TypeDb

CommandExecutor <|.. MariaDbCommandExecutor
CommandExecutor <|..OracleCommandExecutor

Client ..> CommandExecutorFactory : uses

@enduml